fixed default alignements for edit button

--- a/_pictos.scss
+++ b/_pictos.scss
@@ -77,6 +77,13 @@ i.resize{
     }
 }
 
+i.trash{
+    @include fonticon;
+    &::before{
+        content: '\e8cf';
+    }
+}
+
 i.properties{
     @include fonticon;
     &::before{
