--- a/modules/_images.scss
+++ b/modules/_images.scss
@@ -43,8 +43,11 @@ image-select{
 	i.edit{
 		right: 40px;
 		top: 10px;
+		border: none;
+		padding: 0;
 		&::before{
 			font-size: 24px;
+			line-height: 24px;
 		}
 	}
 }
